# EnergyLabels

./: .gitignore  Makefile  main.py  pyproject.toml  requirements.txt  setup.py
log/: 2025-07-06.md  2025-07-07.md  2025-07-08.md  2025-07-09.md  2025-07-10.md  2025-07-12.md  2025-07-15.md  2025-07-16.md  2025-07-19.md  2025-07-20.md  2025-07-21.md  2025-07-22.md  2025-07-25.md  2025-07-28.md
models/: .gitattributes  Qwen3-0.6B-Q5_K_M.gguf  Qwen3-0.6B-UD-IQ3_XXS.gguf  README.md  ner-token-classifier.pt  rnn-binary-classifier.pt
notebooks/: binary-classifier.ipynb  data-exploration.ipynb  model-usage.ipynb  nested-ner.ipynb  training-visualization.ipynb
scripts/: NER_ground_truth.py  NERmodel.py  binary-classifier.py  chatbot.py  data_from_xlsx.py  local_model.py  plot.py  pos_tag_io.py  send_request.py  tokenizer.py  trainNER.py
src/ml_template/: __init__.py  train.py  use.py
src/ml_template/conf/: config.yaml
src/ml_template/conf/datamodule/: default.yaml
src/ml_template/conf/dataset/: dummy_dataset.yaml
src/ml_template/conf/experiment/: default.yaml
src/ml_template/conf/logger/: wandb.yaml
src/ml_template/conf/model/: dummy_model.yaml
src/ml_template/conf/module/: default.yaml
src/ml_template/conf/optimizer/: adamw.yaml
src/ml_template/conf/scheduler/: linear.yaml  on_plateau.yaml  step.yaml
src/ml_template/conf/trainer/: trial_trainer.yaml
src/ml_template/data/: augmentators.py  components.py  datamodule.py
src/ml_template/models/: components.py  initializers.py  models.py  module.py
src/ml_template/utils/: losses.py
(+1 files in other folders)
