[project]
name = "EnergyLabels"
version = "0.1.0"
description = "Fine-tune a pre-trained model for information extraction"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.4",
    "llama-cpp-python>=0.3.12",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.2",
    "uvicorn>=0.35.0",
]
